@@ -1,15 +1,87 @@
-# Starsector IntelliJ Mod Template
+# Second Playthrou - a Starsector Mod
 
-v1.0.1
+v0.1.0
 
 ## Description
 
-This is a template for a generic Starsector mod using Java.
+This mod aims to improve the replayability of the game Starsector.
 
-When you are done, you will have a mod that does nothing, but is ready for anything to be added.
+## Content (controlled via Luna Lib settings)
 
-Written for IntelliJ Community ([free download](https://www.jetbrains.com/idea/download)), but should work with any IDE.
-You do NOT need IntelliJ Ultimate. Latest version of IntelliJ is 2022.2 as of writing.
+### Done
+
+#### Randomizing of the Coreworlds without breaking of missions
+    - Repositioning
+    - Changing of uninhabited planets
+    - Partial changing of inhabited worlds 
+
+ 
+#### Repositioning of Mod factions
+    - either to the core or just around the map
+    - maintain each AI faction systems grouped (WIP)
+    - moves UAF to the border of deep hyperspace (WIP) 
+ 
+ 
+#### Disabling access penalties for distance from the core worlds  
+    -![A_Name](graphics/icons/markets/xcw_placeholder.png "This text is shown on hover")
+    ```html  <img src="graphics/icons/markets/xcw_placeholder.png" alt="A_Name" title="This text is shown on hover" />``` 
+
+#### Disabling access penalties for distance from the core worlds
+
+```html
+<img src="graphics/icons/markets/xcw_placeholder.png" alt="A_Name" title="This text is shown on hover" />
+
+
+
+
+### WIP
+
+#### Custom Start Bonuses
+    - Fathers Logbook
+        - preliminary survey data / full survey data of X(0-100) percent of planets
+        - known location of hypershunts
+        - known location of cryosleepers
+        - X amount of hyperspace terrain data (0 to 700 to unlock the skills)
+
+    - Defect Remnant Start
+        - you can pilot ai ships
+        - you get automated ship points per player level
+        - debuff that makes all ships with crew requirements above 0 have a max cr of 10 and peak combat time of 10 seconds
+        - Remnants hate you and send fleets to eliminate the error that was your birth
+
+
+#### Colony Crisis speed modifier (increase or decrease point gain by a factor)
+    - maybe scaling considering colony size, but Im not certain if possible
+
+
+#### Permanent Wars
+    - all vanilla factions hate you
+    - all non vanilla factions hate you
+    - Total War (everyone hates everyone)
+    - faction list vs faction list (see faction name help file for how to write the names)
+
+
+#### Player Reknown 
+    Affects only FleetPoints ratings for autoresolve)
+
+
+#### Notification filter
+    so you dont get spammed with "Scan this derelict ship for 30k"
+
+
+#### Own faction start with more difficulty settings
+    - random
+    - game journalist: your own system, close to the core, perfect planets, gate, all domain era stable points
+    - easy core: your own system, close to the core, nice planets, gate, 3 stable points
+    - easy rim: your own system, far from the core, nice planets, gate, 3 stable points
+    - medium core: your own system, close to the core, ok planets, 3 stable points
+    - medium rim: your own system, far from the core, ok planets, 3 stable points
+    - hard core: system with faction that hates you, bad planet, on lost planet you get 1 year to reconquer or you get game over
+    - hard rim: system with remnant nexus, remnants hate you, on lost planet you get 1 year to reconquer or you get game over
+
+
+#### Faction Banners
+    - sdsds
 
 ## Optional
 
@@ -22,64 +94,12 @@ You do NOT need IntelliJ Ultimate. Latest version of IntelliJ is 2022.2 as of wr
 
 ## FAQ
 
-- I already have a mod started. Can I just drag and drop this into my mod folder?
-    - Yes, but don't overwrite anything you already have.
-    - You probably mostly want the `.idea` folder (which contains IntelliJ configuration) and the `src` folder - then,
-      move any code you have into the `src` folder and fix the `package` in each .java file (ask if you don't know how).
-- Everything is working! Do I still need the `readme_files` folder?
-  - lol no, delete it.
+- nothing until now
 
 ## Explanation of Folders/Files
 
-The template contains many folders and files that are commonly used, but not all.
-You may not need everything, but leaving them in place doesn't hurt either.
-
-- `.git/` Optional. Used by git to store all git-related information. May be deleted if you are not using git.
-- `.idea/` Required. Used by IntelliJ to store settings and configuration.
-- `.run/` Optional. Used by IntelliJ, contains a ready-to-use configuration for running the game. May be deleted if you
-  want to make your own Run Configuration instead.
-- `data/` Optional. Used by Starsector, this folder just contains some common files that mods use that you would
-  probably end up creating yourself. May be deleted if you don't need it.
-- `graphics/` Optional. Default location to place images of all kinds.
-- `sounds/` Optional. Default location to place sounds, including music, which you then add to `data/config/sounds.json`.
-- `src/` Optional? Contains example source code which you will presumably build upon. May be deleted if your mod doesn't
-  have any code (but then why use this template...?)
-- `.gitignore` Optional. Used by git to determine which files should not be committed (for example, not to commit temp
-  files used during the build process). May be deleted if not using git.
-- `LICENSE` Optional. This is the license file, delete or modify it to your liking.
-- `mod_info.json` Required.
-- `README.md` Required?
-- `yourName_uniqueid.version` Optional. This is a sample Version Checker file. May be deleted if not using Version
-  Checker (but you should).
 
 
-## IntelliJ Configuration
-
-### Set your SDK (the thing that compiles the Java code)
-
-- Open `File -> Project Structure -> Project`.
-- Ensure that the `Language Level` is set to `7`.
-- Set an SDK. This can be 1.7 (aka 7), 1.8 (aka 8), or higher. You can also download an SDK from this dropdown, if the Download option is provided.
-  - Otherwise, [download JDK 7](https://drive.google.com/file/d/1cle4yGhPkROCu3z5WKHKLR098ObGLwPV/view), extract it anywhere, and set it as the SDK.
-  - JDK 7: https://drive.google.com/file/d/1cle4yGhPkROCu3z5WKHKLR098ObGLwPV/view
-  - Using JDK 8 (1.8) or higher _may_ have slightly faster compile times, but is otherwise the same as using JDK 7 (1.7).
-
-![SDKs!](readme_files/intellij-sdk.png "SDKs")
-
-### Ensure that your run configuration is correct:
-
-- In IntelliJ, click `Run - Edit Configurations`.
-- Select "Run Starsector"
-- [ ] Set Working directory to the location of your `starsector-core` folder, if different than what's currently there.
-- [ ] Check other values to make sure they fit your Starsector install. By default, they are set for a typical Windows
-  install.
-- Click Ok. You should now be able to choose Run Starsector from the Run menu and then click the **Debug** button (the icon
-  of a bug)
-- If you are running on linux, the VM Arguments should instead be
-
-  ```-server -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005 -Xverify:none -Djava.library.path=./native/linux -Xms1536m -Xmx1536m -Xss2048k -classpath janino.jar:commons-compiler.jar:commons-compiler-jdk.jar:starfarer.api.jar:starfarer_obf.jar:jogg-0.0.7.jar:jorbis-0.0.15.jar:json.jar:lwjgl.jar:jinput.jar:log4j-1.2.9.jar:lwjgl_util.jar:fs.sound_obf.jar:fs.common_obf.jar:xstream-1.4.10.jar -Dcom.fs.starfarer.settings.paths.saves=./saves -Dcom.fs.starfarer.settings.paths.screenshots=./screenshots -Dcom.fs.starfarer.settings.paths.mods=./mods -Dcom.fs.starfarer.settings.paths.logs=. -Dcom.fs.starfarer.settings.linux=true com.fs.starfarer.StarfarerLauncher```
-
-![Run configuration!](readme_files/intellij-run.png "Run configuration")
 
 ### "I didn't install the game to the default location"
 
